fix width scrollbar

--- a/src/components/burger-ingridients/burger-ingridients.module.scss
+++ b/src/components/burger-ingridients/burger-ingridients.module.scss
@@ -7,4 +7,5 @@
 
 .ingridients_lists {
   overflow-y: auto;
+  scrollbar-width: thin;
 }
