--- a/src/components/burger-ingridients/ingridients-list/ingridients-list.module.scss
+++ b/src/components/burger-ingridients/ingridients-list/ingridients-list.module.scss
@@ -1,5 +1,5 @@
 .ingridients_list {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 23px;
+  column-gap: 24px;
 }
